<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    tools:ignore="RtlHardcoded" >
    
    <!-- tools:ignore="RtlHardcoded" is considered in layout v17 folder -->

    <TextView
        android:id="@+id/fragment_battery_is_charging_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/is_charging_default_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fragment_battery_is_charging_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_battery_is_charging_value_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignTop="@id/fragment_battery_is_charging_value_text_view"
        android:gravity="center_vertical"
        android:text="@string/is_charging"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/fragment_battery_is_usb_charging_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/fragment_battery_is_charging_value_text_view"
        android:text="@string/is_usb_charging_default_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fragment_battery_is_usb_charging_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_battery_is_usb_charging_value_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/fragment_battery_is_usb_charging_value_text_view"
        android:layout_below="@id/fragment_battery_is_charging_text_view"
        android:gravity="center_vertical"
        android:text="@string/is_usb_charging"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/fragment_battery_is_ac_charging_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/fragment_battery_is_usb_charging_value_text_view"
        android:text="@string/is_ac_charging_default_value"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/fragment_battery_is_ac_charging_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/fragment_battery_is_ac_charging_value_text_view"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@id/fragment_battery_is_ac_charging_value_text_view"
        android:layout_below="@id/fragment_battery_is_usb_charging_text_view"
        android:gravity="center_vertical"
        android:text="@string/is_ac_charging"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>